cli/tests/snapshot/snapshots/snapshot__eval_stderr_enum_contract_shape_mismatch.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: contract broken by the caller
       shape mismatch for 'Foo
  ┌─ [INPUTS_PATH]/errors/enum_contract_shape_mismatch.ncl:3:30
  │
3 │ (std.function.id | forall r. [| 'Foo Number, 'Bar String, 'Qux; r |] -> [| 'Foo Number, 'Bar String, 'Qux; r |]) 'Foo
  │                              ---------------------------------------                                             ---- evaluated to this expression
  │                              │                                                                                    
  │                              expected type of the argument provided by the caller
  │
  = Found an enum with tag `'Foo` which is indeed part of the expected enum type
  = However, their shape differs: one is an enum variant that carries an argument while the other is a bare enum tag

note: 
  ┌─ [INPUTS_PATH]/errors/enum_contract_shape_mismatch.ncl:3:1
  │
3 │ (std.function.id | forall r. [| 'Foo Number, 'Bar String, 'Qux; r |] -> [| 'Foo Number, 'Bar String, 'Qux; r |]) 'Foo
  │ --------------------------------------------------------------------------------------------------------------------- (1) calling <func>

note: 
  ┌─ [INPUTS_PATH]/errors/enum_contract_shape_mismatch.ncl:3:2
  │
3 │ (std.function.id | forall r. [| 'Foo Number, 'Bar String, 'Qux; r |] -> [| 'Foo Number, 'Bar String, 'Qux; r |]) 'Foo
  │  --------------- (2) calling <func>


