cli/tests/snapshot/snapshots/snapshot__eval_stderr_fail_additional_contract.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: missing definition for `baz`
  ┌─ [IMPORTS_PATH]/additional_contract1.ncl:3:3
  │
3 │   baz | Bool,
  │   ^^^ required here
  │
  ┌─ [INPUTS_PATH]/eval/fail_additional_contract.ncl:3:1
  │  
3 │ ╭ {
4 │ │   foo = 1,
5 │ │   bar = "hello, world!",
6 │ │ }
  │ ╰─' in this record
