cli/tests/snapshot/snapshots/snapshot__eval_stderr_fieldarg_with_contracts.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: contract broken by the value of `opt_level`
   ┌─ [INPUTS_PATH]/eval/fieldarg_with_contracts.ncl:13:26
   │
13 │   opt_level | OptLevel = "A" ++ std.string.from_number level,
   │               --------   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ applied to this expression
   │               │           
   │               expected type
   │
   ┌─ <generated by evaluation 0>:1:1
   │
 1 │ "A4"
   │ ---- evaluated to this value
